modding-app/src/Player/Player.module.css
.player {
  display: grid;
  grid-template-columns: 1fr 300px;
  grid-template-rows: 1fr 200px;
  height: 100vh;
}

.player .videoWrapper {
  place-self: center;
  height: 100%;
}

.player video {
  max-height: 100%;
  max-width: 100%;
}

.controls {
  display: grid;
  grid-template-columns: max-content auto;
  grid-template-rows: max-content auto;
  grid-template-areas: 
    "buttons slider"
    "buttons progress";
}

.progressBar {
  height: 1.3rem;
  background-color: #575757;
  margin: 0.5rem 1rem 1rem 1rem;
  cursor: pointer;
  grid-area: progress;
}
.progressBarInner {
  height: 100%;
  background-color: #7c7c7c;
}

.videoSlider {
  margin: 1rem 1rem 0.5rem 1rem;
  grid-area: slider;
}

.playButtons {
  grid-area: buttons;
  padding: 1rem;
}
.playButtons button {
  margin: 0.2rem;
}

.audioSlider {
  margin: 1rem;
}

.buttonsContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  padding: 2rem 0;
}

button {
  padding: 0.5rem 1rem;
  font-size: 16px;
  color: white;
  background-color: inherit;
  border: 1px solid #6c6c6c;
  margin: 0.5rem 2rem;
  border-radius: 5px;
  outline: none;
  cursor: pointer;
}

button.green {
  background-color: #376337;
  border-color: #78d278;
}
button.green:active {
  background-color: green;
}

button.red {
  background-color: #6c3e3e;
  border-color: #be7272;
}
button.red:active {
  background-color: red;
}

button:active {
  background-color: #424242;

}

input[type="radio"] {
  margin: 0.3rem;
}

